--- a/.github/workflows/lint_and_test.yml
+++ b/.github/workflows/lint_and_test.yml
@@ -6,17 +6,8 @@ on:
   push:
     branches:
       - "*"
-    paths:
-      - "src/**"
-      - "Cargo.*"
-      - build.rs
   pull_request:
     branches: ["main"]
-    paths:
-      - ".github/workflows/tests.yml"
-      - "src/**"
-      - "Cargo.*"
-      - build.rs
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.sha }}
@@ -44,7 +35,18 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - uses: actions/setup-python@v3
-      - uses: pre-commit/action@v3.0.0
+
+      - name: Set up Ruby on Windows
+        if: runner.os == 'Windows'
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.1'
+          msys2: true
+
+      - name: Install pre-commit dependencies
+        run: python -m pip install pre-commit
+
+      - uses: pre-commit/action@v3.0.1
         name: Run pre-commit hooks
 
       - name: Run Rust tests
